kubernetes/mini/apps/downloads/buildarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: buildarr
  name: buildarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: buildarr
    spec:
      containers:
        - name: buildarr
          image: callum027/buildarr:0.7
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 10m
              memory: 128M
            limits:
              memory: 256M
      volumes:
        - name: config-template
          configMap:
            name: buildarr-configmap
        - name: config
          emptyDir: {}
