kubernetes/mini/apps/downloads/buildarr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: buildarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: buildarr

  egress:
    - toEndpoints: # prowlarr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints: # radarr
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints: # sonarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
